// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StickyBar renders heart-o, thumbs-up-o, thumbs-down-o icons and does not render heart icon when type 'view-recipe' is passed 1`] = `
<StickyBar
  currentLocation="view-recipe"
  dispatch={[Function]}
>
  <div
    className="view-recipe"
  >
    <div
      className="sticky-bar-wrapper text-center d-block d-sm-block d-md-none"
    >
      <div
        className="container-fluid"
      >
        <div
          className="row"
          id="result-search-form-div"
        >
          <div
            className="col-12 w-100 py-3"
          >
            <Form
              id="search-form"
              tag="form"
            >
              <form
                className=""
                id="search-form"
              >
                <InputGroup
                  tag="div"
                >
                  <div
                    className="input-group"
                  >
                    <Label
                      className="sr-only"
                      for="search"
                      tag="label"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                    >
                      <label
                        className="sr-only  form-control-label"
                        htmlFor="search"
                      >
                        Search for Recipe
                      </label>
                    </Label>
                    <Input
                      id="search"
                      placeholder="Search for More Recipes"
                      tag="p"
                      type="text"
                    >
                      <input
                        className="form-control"
                        id="search"
                        placeholder="Search for More Recipes"
                        type="text"
                      />
                    </Input>
                    <InputGroupButton
                      className="input-group-btn"
                      tag="div"
                    >
                      <div
                        className="input-group-btn input-group-btn"
                      >
                        <Button
                          color="secondary"
                          tag="button"
                          type="submit"
                        >
                          <button
                            className="btn btn-secondary"
                            onClick={[Function]}
                            type="submit"
                          >
                            Submit
                          </button>
                        </Button>
                      </div>
                    </InputGroupButton>
                  </div>
                </InputGroup>
              </form>
            </Form>
          </div>
        </div>
      </div>
      <div
        className="sticky-bar text-center"
      >
        <a
          className="nav-link d-inline"
          data-toggle="modal"
        >
          <FontAwesome
            id="social-modal-icon"
            name="share-alt"
            onClick={[Function]}
            size="lg"
          >
            <span
              aria-hidden={true}
              className="fa fa-share-alt fa-lg"
              id="social-modal-icon"
              onClick={[Function]}
            />
          </FontAwesome>
        </a>
        <a
          className="nav-link d-inline"
          title="New Recipe"
        >
          <FontAwesome
            id="add-edit-modal-icon"
            name="plus"
            onClick={[Function]}
            size="lg"
          >
            <span
              aria-hidden={true}
              className="fa fa-plus fa-lg"
              id="add-edit-modal-icon"
              onClick={[Function]}
            />
          </FontAwesome>
        </a>
        <a
          className="nav-link d-inline favorite"
          title="Favorite"
        >
          <FontAwesome
            name="heart-o"
            size="lg"
          >
            <span
              aria-hidden={true}
              className="fa fa-heart-o fa-lg"
            />
          </FontAwesome>
        </a>
        <a
          className="nav-link d-inline upvote"
          title="Upvote"
        >
          <FontAwesome
            name="thumbs-o-up"
            size="lg"
          >
            <span
              aria-hidden={true}
              className="fa fa-thumbs-o-up fa-lg"
            />
          </FontAwesome>
        </a>
        <a
          className="nav-link d-inline downvote"
          title="Downvote"
        >
          <FontAwesome
            name="thumbs-o-down"
            size="lg"
          >
            <span
              aria-hidden={true}
              className="fa fa-thumbs-o-down fa-lg"
            />
          </FontAwesome>
        </a>
        <a
          className="nav-link d-inline"
        >
          <FontAwesome
            className="search-icon"
            name="search"
            size="lg"
          >
            <span
              aria-hidden={true}
              className="fa fa-search fa-lg search-icon"
            />
          </FontAwesome>
        </a>
        <a
          className="nav-link d-inline"
        >
          <FontAwesome
            name="heart"
            size="lg"
          >
            <span
              aria-hidden={true}
              className="fa fa-heart fa-lg"
            />
          </FontAwesome>
        </a>
      </div>
    </div>
  </div>
</StickyBar>
`;

exports[`StickyBar renders no sticky bar when type 'login' is passed 1`] = `
<StickyBar
  currentLocation="auth"
  dispatch={[Function]}
/>
`;

exports[`StickyBar renders no sticky bar when type 'signup' is passed 1`] = `
<StickyBar
  currentLocation="auth"
  dispatch={[Function]}
/>
`;

exports[`StickyBar renders oven icon when type 'user-profile' is passed 1`] = `
<StickyBar
  currentLocation="user-profile"
  dispatch={[Function]}
>
  <div
    className="user-profile"
  >
    <div
      className="sticky-bar-wrapper text-center d-block d-sm-block d-md-none"
    >
      <div
        className="container-fluid"
      >
        <div
          className="row"
          id="result-search-form-div"
        >
          <div
            className="col-12 w-100 py-3"
          >
            <Form
              id="search-form"
              tag="form"
            >
              <form
                className=""
                id="search-form"
              >
                <InputGroup
                  tag="div"
                >
                  <div
                    className="input-group"
                  >
                    <Label
                      className="sr-only"
                      for="search"
                      tag="label"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                    >
                      <label
                        className="sr-only  form-control-label"
                        htmlFor="search"
                      >
                        Search for Recipe
                      </label>
                    </Label>
                    <Input
                      id="search"
                      placeholder="Search for More Recipes"
                      tag="p"
                      type="text"
                    >
                      <input
                        className="form-control"
                        id="search"
                        placeholder="Search for More Recipes"
                        type="text"
                      />
                    </Input>
                    <InputGroupButton
                      className="input-group-btn"
                      tag="div"
                    >
                      <div
                        className="input-group-btn input-group-btn"
                      >
                        <Button
                          color="secondary"
                          tag="button"
                          type="submit"
                        >
                          <button
                            className="btn btn-secondary"
                            onClick={[Function]}
                            type="submit"
                          >
                            Submit
                          </button>
                        </Button>
                      </div>
                    </InputGroupButton>
                  </div>
                </InputGroup>
              </form>
            </Form>
          </div>
        </div>
      </div>
      <div
        className="sticky-bar text-center"
      >
        <a
          className="nav-link d-inline"
        >
          <i
            className="aria-hidden flaticon flaticon-oven-kitchen-tool-for-cooking-foods"
          />
        </a>
        <a
          className="nav-link d-inline"
          title="New Recipe"
        >
          <FontAwesome
            id="add-edit-modal-icon"
            name="plus"
            onClick={[Function]}
            size="lg"
          >
            <span
              aria-hidden={true}
              className="fa fa-plus fa-lg"
              id="add-edit-modal-icon"
              onClick={[Function]}
            />
          </FontAwesome>
        </a>
        <a
          className="nav-link d-inline"
        >
          <FontAwesome
            className="search-icon"
            name="search"
            size="lg"
          >
            <span
              aria-hidden={true}
              className="fa fa-search fa-lg search-icon"
            />
          </FontAwesome>
        </a>
        <a
          className="nav-link d-inline"
        >
          <FontAwesome
            name="heart"
            size="lg"
          >
            <span
              aria-hidden={true}
              className="fa fa-heart fa-lg"
            />
          </FontAwesome>
        </a>
      </div>
    </div>
  </div>
</StickyBar>
`;

exports[`StickyBar renders share icon when type 'home' is passed 1`] = `
<StickyBar
  currentLocation="home"
  dispatch={[Function]}
>
  <div
    className="home"
  >
    <div
      className="sticky-bar-wrapper text-center d-block d-sm-block d-md-none"
    >
      <div
        className="container-fluid"
      >
        <div
          className="row"
          id="result-search-form-div"
        >
          <div
            className="col-12 w-100 py-3"
          >
            <Form
              id="search-form"
              tag="form"
            >
              <form
                className=""
                id="search-form"
              >
                <InputGroup
                  tag="div"
                >
                  <div
                    className="input-group"
                  >
                    <Label
                      className="sr-only"
                      for="search"
                      tag="label"
                      widths={
                        Array [
                          "xs",
                          "sm",
                          "md",
                          "lg",
                          "xl",
                        ]
                      }
                    >
                      <label
                        className="sr-only  form-control-label"
                        htmlFor="search"
                      >
                        Search for Recipe
                      </label>
                    </Label>
                    <Input
                      id="search"
                      placeholder="Search for More Recipes"
                      tag="p"
                      type="text"
                    >
                      <input
                        className="form-control"
                        id="search"
                        placeholder="Search for More Recipes"
                        type="text"
                      />
                    </Input>
                    <InputGroupButton
                      className="input-group-btn"
                      tag="div"
                    >
                      <div
                        className="input-group-btn input-group-btn"
                      >
                        <Button
                          color="secondary"
                          tag="button"
                          type="submit"
                        >
                          <button
                            className="btn btn-secondary"
                            onClick={[Function]}
                            type="submit"
                          >
                            Submit
                          </button>
                        </Button>
                      </div>
                    </InputGroupButton>
                  </div>
                </InputGroup>
              </form>
            </Form>
          </div>
        </div>
      </div>
      <div
        className="sticky-bar text-center"
      >
        <a
          className="nav-link d-inline"
          data-toggle="modal"
        >
          <FontAwesome
            id="social-modal-icon"
            name="share-alt"
            onClick={[Function]}
            size="lg"
          >
            <span
              aria-hidden={true}
              className="fa fa-share-alt fa-lg"
              id="social-modal-icon"
              onClick={[Function]}
            />
          </FontAwesome>
        </a>
        <a
          className="nav-link d-inline"
          title="New Recipe"
        >
          <FontAwesome
            id="add-edit-modal-icon"
            name="plus"
            onClick={[Function]}
            size="lg"
          >
            <span
              aria-hidden={true}
              className="fa fa-plus fa-lg"
              id="add-edit-modal-icon"
              onClick={[Function]}
            />
          </FontAwesome>
        </a>
        <a
          className="nav-link d-inline"
        >
          <FontAwesome
            className="search-icon"
            name="search"
            size="lg"
          >
            <span
              aria-hidden={true}
              className="fa fa-search fa-lg search-icon"
            />
          </FontAwesome>
        </a>
        <a
          className="nav-link d-inline"
        >
          <FontAwesome
            name="heart"
            size="lg"
          >
            <span
              aria-hidden={true}
              className="fa fa-heart fa-lg"
            />
          </FontAwesome>
        </a>
      </div>
    </div>
  </div>
</StickyBar>
`;
